Prevent masthead overlapping sidebar

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -14,10 +14,11 @@
   margin-bottom: 1em;
 
   @media screen and (min-width: $sidebar-min-width) {
-    height: 100vh;
+    height: calc(100vh - #{$masthead-height});
     overflow-y: auto;               // Add scrollbar if the sidebar is too long
     position: fixed;
-    padding-top: $masthead-height;
+    top: $masthead-height;
+    padding-top: 1em;
   }
 
   @include breakpoint($large) {
