--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -386,7 +386,7 @@ body:hover .visually-hidden button {
     @include clearfix();
     position: -webkit-sticky;
     position: sticky;
-    top: 2em;
+    top: calc(#{$masthead-height} + 1em);
 
     > * {
       display: block;
